# DeMandelbrot

./: .gitignore  CMakeLists.txt  README.md
app/: App.cpp
include/: Agent.hpp  GeneratorHelper.hpp  GlobalParameters.hpp  ImageIO.hpp  Mandelbrot.hpp  Swarm.hpp  SwarmTypes.hpp
include/ImageIO/: ImageIOTypes.hpp  InputParser.hpp  PixelMatrix.hpp  Utility.hpp
include/Mandelbrot/: Mandelbrot.hpp
include/Swarm/: Agent.hpp  Swarm.hpp  SwarmTypes.hpp
source/: Agent.cpp  GeneratorHelper.cpp  Mandelbrot.cpp  Swarm.cpp
source/ImageIO/: InputParser.cpp  PixelMatrix.cpp  Utility.cpp
source/Mandelbrot/: Mandelbrot.cpp
source/Swarm/: Agent.cpp  GeneratorHelper.cpp  Swarm.cpp
